--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <uses-permission android:name="android.permission.INTERNET"/>
-
+        <!--<uses-permission android:name="android.permission.INTERNET"/>
+        -->
     </application>
 </manifest>
